[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bluellm"
version = "0.1.0"
description = "Minimal proxy that lets Claude Code talk to Azure (Microsoft Foundry) / OpenAI GPT models via the Anthropic Messages API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=2.0,<3",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.15", "mypy>=1.11"]

[project.scripts]
bluellm = "bluellm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bluellm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src/bluellm"]

[tool.ruff.lint.per-file-ignores]
"src/bluellm/translation.py" = ["E402"]

[tool.coverage.run]
source = ["bluellm"]

[tool.coverage.report]
show_missing = true
fail_under = 100
